<resources>
    <string name="app_name">WeiJu2</string>
    <string name="app_description">The first scriptable xposed module, provides a new way to change the application behavior.\nPowered by Lua and made with ♥</string>

    <string name="logcat">Logcat</string>
    <string name="about">About</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="version">Version</string>
    <string name="restart">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="template">Template</string>

    <string name="about_bug_report">Bug report</string>
    <string name="about_source_code_title">Source code</string>
    <string name="about_source_code_subtitle">If you like this app please hit the star button on github to support my work</string>

    <string name="home_my_scripts_empty">click  button to create a new script</string>
    <string name="home_available_scripts_empty">No more scripts available for this app</string>
    <string name="home_my_scripts">My Scripts</string>
    <string name="home_available_scripts">Available Scripts</string>
    <string name="home_status">Status</string>
    <string name="home_launch_app">Launch app</string>
    <string name="home_drag_to_the_right">Drag to the right</string>
    <string name="home_release_to_delete">Release to delete</string>
    <string name="home_status_not_activated_in_xposed">WeiJu2 was not activated in xposed</string>
    <string name="home_new_version">new version</string>
    <string name="home_package">package</string>
    <string name="home_copy_example">Copy Example</string>
    <string name="home_add_to_my_scripts">Add To My Scripts</string>
    <string name="home_about_this_package">About This Package</string>
    <string name="home_script_name">Script Name</string>

    <string name="main_permission_request">Permission Request</string>
    <string name="main_permission_request_root_description">We need root access for `logcat` and other command-line utilities such as `am` to help you force-stop app</string>

    <string name="migratetool_cannot_load_hooklist">MigrateTool: Cannot load hook_list</string>
    <string name="migratetool_please_activate_weiju2">MigrateTool: Please activate WeiJu2 in xposed/lsposed first</string>
    <string name="migratetool_migrate_success">MigrateTool: Successfully migrated from the old version of WeiJu</string>

    <string name="home_status_can_not_force_stop">Auto force-stop failed: need root permission</string>
    <string name="home_status_can_not_restart">Restart failed: need root permission</string>

    <string name="settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="general">General</string>
    <string name="setting_backup_summary">Export your settings and scripts to the clipboard in JSON format</string>
    <string name="setting_restore_summary">Import your settings and scripts from the clipboard</string>
    <string name="other">Other</string>

    <string name="setting_restore_succeed">Restore succeed</string>
    <string name="setting_restore_failed">Restore failed, please check your json data</string>
    <string name="setting_saved_to_clipbard">Saved to clipboard</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="scroll_to_bottom">Scroll to Bottom</string>
</resources>
