<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/xposed_status"
        android:icon="@drawable/ic_info"
        android:title="@string/home_status"
        app:showAsAction="always" />

    <item
        android:id="@+id/launch_app"
        android:icon="@drawable/ic_run"
        android:title="@string/home_launch_app"
        app:showAsAction="always" />

    <item
        android:id="@+id/logcat"
        android:title="@string/logcat"
        android:icon="@drawable/ic_terminal"
        app:showAsAction="always" />

    <item
        android:id="@+id/restart"
        android:title="@string/restart"
        app:showAsAction="never"/>

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>
