<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <Preference
            android:key="@string/backup"
            android:summary="@string/setting_backup_summary"
            android:title="@string/backup"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/restore"
            android:summary="@string/setting_restore_summary"
            android:title="@string/restore"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Editor">
        <SwitchPreference
            android:key="editor_word_wrap"
            android:summary="Set whether text in editor should be wrapped to fit its size"
            android:title="Wrap"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="AI">
        <EditTextPreference
            android:defaultValue=""
            android:key="openai_api_key"
            android:summary="%s"
            android:title="OpenAI API Key"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="gpt-3.5-turbo"
            android:entries="@array/openai_chat_model_entries"
            android:entryValues="@array/openai_chat_model_values"
            android:key="openai_chat_model"
            android:summary="%s"
            android:title="Model"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <Preference
            android:key="@string/about"
            android:title="@string/about"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
