<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/base"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/home_script_name"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/v_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_outline_edit_text_background"
            android:paddingHorizontal="8dp">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/author"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/v_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_outline_edit_text_background"
            android:paddingHorizontal="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/description"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/v_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_outline_edit_text_background"
            android:paddingHorizontal="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/template"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/v_template"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/templates"
            android:popupBackground="@color/surface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="right">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/v_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/cancel"
                app:backgroundTint="@color/highlight_high"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/v_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                app:backgroundTint="@color/subtle"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
